--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.4.36",
-        "laravel/tinker": "^2.0"
+        "laravel/framework": "6.12.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^1.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
